force-app/main/default/objects/Imposto__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Estado</label>
    <referenceTo>Estado__c</referenceTo>
    <relationshipLabel>Impostos</relationshipLabel>
    <relationshipName>Impostos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>