force-app/main/default/objects/Imposto__c/fields/Imposto_Custo__c.field-meta.xml
<CustomField>
    <fullName>Imposto_Custo__c</fullName>
    <label>Imposto Sobre Custo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>