force-app/main/default/objects/Imposto__c/validationRules/produto_validacao.validationRule-meta.xml
<ValidationRule>
    <fullName>produto_validacao</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorMessage>Erro: produto obrigatório.</errorMessage>
</ValidationRule>