force-app/main/default/objects/Imposto__c/listViews/Impostos_Minas.listView-meta.xml
<ListView>
    <fullName>Impostos_Minas</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Centro_Distribuicao__c</field>
        <operation>equals</operation>
        <value>Centro de MG</value>
    </filters>
    <label>Impostos Minas</label>
</ListView>